<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>imu_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sairamsridharan2003@gmail.com">sairam</maintainer>
  <license>TODO: License declaration</license>

  <depend>serial</depend>
  <depend>IMUmsg</depend>
  <depend>custom_msgs_imu</depend>
  <build_depend>rclpy</build_depend>
  <exec_depend>rclpy</exec_depend>
  <build_export_depend>rclpy</build_export_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
